--- a/user.html
+++ b/user.html
@@ -66,6 +66,8 @@
 			a{
 				color: white;
 				text-decoration: none;
+                        font-weight: 600;
+                        font-size: 30px;
 			}
 			#body{
 				height: 500px;
